k8s/workloads/syncthing/manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: syncthing
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: syncthing
  name: syncthing
  labels:
    app: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      nodeSelector:
        platform.io/type: pi
      containers:
        - name: syncthing
          image: linuxserver/syncthing:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8384
            - containerPort: 22000
            - containerPort: 21027
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: config
          persistentVolumeClaim:
            claimName: config-pvc
---
apiVersion: v1
kind: Service
metadata:
  namespace: syncthing
  name: syncthing
spec:
  selector:
    app: syncthing
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8384
    - name: tcp1
      protocol: TCP
      port: 22000
      targetPort: 22000
    - name: udp1
      protocol: UDP
      port: 22000
      targetPort: 22000
    - name: udp2
      protocol: UDP
      port: 21027
      targetPort: 21027
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing
  namespace: syncthing
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`syncthing.remini.site`)
      kind: Rule
      services:
        - name: syncthing
          port: 80
